src/main/java/com/example/finalprojectdtomarket/_core/errors/exception/Exception401.java
package com.example.finalprojectdtomarket._core.errors.exception;

public class Exception401 extends RuntimeException {
    public Exception401(String msg) {
        super(msg);
    }
}
